icm-macros/testing/unpack/errors/MappingField.sol
pragma solidity ^0.8.30;

// #[unpack()]
struct HasMapping {
    mapping(uint256 => uint256) data;
}